    +  static method shutdown : int ($sockfd : int, $how : int);
    +  static method socket : int ($domain : int, $type : int, $protocol : int);
    +  static method socketpair : int ($domain : int, $type : int, $protocol : int, $pair : int[]);
    +  static method setsockopt : int ($sockfd : int, $level : int, $optname : int, $optval : object of string|Int);

  [Incompatible Changes]
    * The Sys::Socket::Sockaddr::Interface interface is removed.
    * The Sys::Socket::Sockaddr class does not have the Sys::Socket::Sockaddr::Interface interface.
    * The has_interface method is removed from the Sys::Socket::Sockaddr class.
    * The following names of methods in clesses are renamed.
    
      class Sys::Socket::Addrinfo
      -  native method copy_ai_addr : Sys::Socket::Sockaddr ();
      +  native method ai_addr : Sys::Socket::Sockaddr ();
      -  native method copy_ai_canonname : string ();
      +  native method ai_canonname : string ();
      class Sys::Socket::Sockaddr::In extends Sys::Socket::Sockaddr : pointer
      -  native method copy_sin_addr : Sys::Socket::In_addr ();
      +  native method sin_addr : Sys::Socket::In_addr ();
      class Sys::Socket::Sockaddr::In extends Sys::Socket::Sockaddr : pointer
      -    $clone->set_sin_addr($self->copy_sin_addr);
      +    $clone->set_sin_addr($self->sin_addr);
      class Sys::Socket::Sockaddr::In6 extends Sys::Socket::Sockaddr : pointer
      -  native method copy_sin6_addr : Sys::Socket::In6_addr ();
      +  native method sin6_addr : Sys::Socket::In6_addr ();
      class Sys::Socket::Sockaddr::In6 extends Sys::Socket::Sockaddr : pointer
      -    $clone->set_sin6_addr($self->copy_sin6_addr);
      +    $clone->set_sin6_addr($self->sin6_addr);
      class Sys::Socket::Sockaddr::Un extends Sys::Socket::Sockaddr : pointer
      -  native method copy_sun_path : string ();
      +  native method sun_path : string ();
      -    $clone->set_sun_path($self->copy_sun_path);