@@ -80,7 +80,7 @@ Sets C<sin_port>.
 
 =head2 sizeof
 
-  method sizeof : int ()
+  method size : int ()
 
 The size of C<struct sockaddr_in>.
 
