@@ -56,7 +56,7 @@ Sets C<ss_family>.
 
 =head2 sizeof
 
-  method sizeof : int ()
+  method size : int ()
 
 The size of C<struct sockaddr_storage>.
 
