@@ -22,7 +22,7 @@ class Sys::Socket::Sockaddr::Un extends Sys::Socket::Sockaddr : pointer {
 
   native method set_sun_path : void ($path : string);
   
-  native method sizeof : int ();
+  native method size : int ();
   
   method clone : Sys::Socket::Sockaddr::Un () {
     my $clone = Sys::Socket::Sockaddr::Un->new;
